# g360_NC_sustentor

./: .gitignore  README.md  RESUMEN_FINAL_VERIFICACION.md  SINCRONIZACION_FINAL.md  VERIFICACION_SINCRONIZACION.md  create_shortcut.vbs  main.py  pyproject.toml  requirements.txt  run.bat  run_log.txt  test.xlsx
g360-nc-sustentor-portable/: INSTRUCCIONES.txt  VERIFICACION_SINCRONIZACION.txt  create_shortcut.vbs  main.py  run.bat
g360-nc-sustentor-portable/assets/templates/: G360_Plantilla_HISTORIAL.xlsx  G360_Plantilla_REQUERIMIENTOS.xlsx
g360-nc-sustentor-portable/src/core/: processor.py
g360-nc-sustentor-portable/src/excel/: generator.py
src/core/: processor.py
src/excel/: generator.py
