[project]
name = "g360-nc-sustentor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flet==0.22.0",
    "flet-runtime==0.22.0",
    "openpyxl==3.1.5",
    "pandas==2.2.3",
    "python-dotenv==1.2.2",
    "xlrd==2.0.1",
    "uv>=0.6.2",
]
